--- a/src/index.css
+++ b/src/index.css
@@ -22,7 +22,7 @@ body {
   width: 100%;
   height: 100vh;
   display: grid;
-  /* 控制區塊的大小 有四個區塊 */
+  /* 控制橫向列表的直式欄位區塊 分成四個區塊 */
   grid-template-rows: auto auto 1fr auto;
 }
 
@@ -30,10 +30,11 @@ h1 {
   text-align: center;
   background-color: #f4a226;
   font-size: 8rem;
-}
-
-.logo {
-  font-size: 80%;
+  text-transform: uppercase;
+  font-weight: 400;
+  word-spacing: 30px;
+  letter-spacing: -5px;
+  padding: 2.4rem 0;
 }
 
 .add-form {
@@ -41,6 +42,33 @@ h1 {
   padding: 2.8rem 0;
   display: flex;
   justify-content: center;
+  align-items: center;
+  justify-content: center;
+  gap: 0.8rem;
+}
+
+h3 {
+  margin-right: 1.6rem;
+  font-size: 2.4rem;
+}
+
+button,
+select,
+input {
+  background-color: #ffebb3;
+  color: #5a3e2b;
+  font-family: inherit;
+  border: none;
+  border-radius: 10rem;
+  padding: 1.2rem 3.2rem;
+  font-weight: 700;
+  font-size: 1.8rem;
+  cursor: pointer;
+}
+
+.add-form button {
+  text-transform: uppercase;
+  background-color: #76c7ad;
 }
 
 .list {
@@ -53,6 +81,42 @@ h1 {
   flex-direction: column;
   gap: 3.2rem;
   align-items: center;
+}
+
+.actions button,
+.list select {
+  text-transform: uppercase;
+  padding: 0.8rem 2.4rem;
+  font-size: 1.4rem;
+  font-weight: 700;
+  margin: 0 0.8rem;
+}
+
+.list ul {
+  list-style: none;
+  width: 80%;
+  /* overflow: scroll; */
+
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 1.2ren;
+  justify-content: center;
+  align-content: start;
+}
+
+.list li {
+  display: flex;
+  align-items: center;
+  gap: 1.2rem;
+}
+
+.list li button {
+  cursor: pointer;
+  background: none;
+  border: none;
+  font-size: 1.8rem;
+  padding: 0.8rem;
+  transform: translateY(2px);
 }
 
 .stats {
